--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -1,4 +1,5 @@
 // footer___________
+
 .footer-adress {
   background-color: var(--primary-grey-color);
   padding-top: 60px;
@@ -20,76 +21,77 @@
 }
 .footer-contacts {
   margin-top: 20px;
+  &__item:not(:last-child) {
+    margin-bottom: 9px;
+  }
+  &__link {
+    line-height: 1.71;
+    letter-spacing: 0.03em;
+    color: rgba(255, 255, 255, 0.6);
+    text-decoration: none;
+    font-style: normal;
+  }
+  &__text {
+    color: var(--primary-white-color);
+    line-height: 1.71;
+    font-style: normal;
+    text-decoration: none;
+  }
 }
-.footer-contacts__item:not(:last-child) {
-  margin-bottom: 9px;
-}
-.footer-contacts__link {
-  line-height: 1.71;
-  letter-spacing: 0.03em;
-  color: rgba(255, 255, 255, 0.6);
-  text-decoration: none;
-  font-style: normal;
-}
-.footer-contacts__text {
-  color: var(--primary-white-color);
-  line-height: 1.71;
-  font-style: normal;
-  text-decoration: none;
-}
+
 .social-contacts {
   margin-right: auto;
-}
-.social-contacts__wrapper {
-  margin-left: 70px;
-}
-.social-contacts__title {
-  display: block;
-  color: var(--primary-white-color);
-  font-weight: 700;
-  font-size: 14px;
-  line-height: 1.14;
-  letter-spacing: 0.03em;
-  text-transform: uppercase;
-  margin-bottom: 20px;
-}
-.social-contacts__list {
-  display: flex;
-  align-items: baseline;
-}
-.social-contacts__item {
-  width: 44px;
-  height: 44px;
-  margin-right: 10px;
-}
-.social-contacts__item:not(:last-child) {
-  margin-right: 10px;
-}
-.social-contacts__link {
-  width: 100%;
-  height: 100%;
-  border-radius: 50%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  background: rgba(255, 255, 255, 0.1);
-  color: #ffffff;
-  position: relative;
-}
-.social-contacts__link:hover,
-.social-contacts__link:focus {
-  background-color: var(--accent-color);
-  color: #ffffff;
-  opacity: 0.8;
-  transform: scale(0.7);
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.social-contacts__icon {
-  fill: currentColor;
-  position: absolute;
-  opacity: 1;
-  transform: scale(1);
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  &__wrapper {
+    margin-left: 70px;
+  }
+  &__title {
+    display: block;
+    color: var(--primary-white-color);
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 1.14;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    margin-bottom: 20px;
+  }
+  &__list {
+    display: flex;
+    align-items: baseline;
+  }
+  &__item {
+    width: 44px;
+    height: 44px;
+    margin-right: 10px;
+  }
+  &__item:not(:last-child) {
+    margin-right: 10px;
+  }
+  &__link {
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: rgba(255, 255, 255, 0.1);
+    color: #ffffff;
+    position: relative;
+  }
+  &__link:hover,
+  &__link:focus {
+    background-color: var(--accent-color);
+    color: #ffffff;
+    opacity: 0.8;
+    transform: scale(0.7);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  &__icon {
+    fill: currentColor;
+    position: absolute;
+    opacity: 1;
+    transform: scale(1);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
 }
 .footer-email__title {
   display: block;
@@ -101,63 +103,62 @@
   text-transform: uppercase;
   margin-bottom: 20px;
 }
-.form{
-    &__wrapper{
-        display: flex;
-        align-items: center;
-        justify-content: center;
-    }
-    &__input{
-        background-color: #2f303a;
-        color: rgba(255, 255, 255, 0.6);
+.form {
+  &__wrapper {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  &__input {
+    background-color: #2f303a;
+    color: rgba(255, 255, 255, 0.6);
 
-        width: 358px;
-        height: 50px;
+    width: 358px;
+    height: 50px;
 
-        font-size: 16px;
-        line-height: 1.25;
-        letter-spacing: 0.03em;
+    font-size: 16px;
+    line-height: 1.25;
+    letter-spacing: 0.03em;
 
-        border: 1px solid rgba(255, 255, 255, 0.3);
-        filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
-        border-radius: 4px;
-        outline: none;
+    border: 1px solid rgba(255, 255, 255, 0.3);
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+    border-radius: 4px;
+    outline: none;
 
-        padding: 15px 16px;
-        margin-right: 12px;
+    padding: 15px 16px;
+    margin-right: 12px;
+  }
+  &__btn {
+    display: flex;
+    align-items: center;
+    justify-content: center;
 
-    }
-}
-.form__btn{
-  display: flex;
-  align-items: center;
-  justify-content: center;
+    background-color: var(--accent-color);
+    color: #ffffff;
 
-  background-color: var(--accent-color);
-  color: #ffffff;
+    width: 200px;
+    height: 50px;
 
-  width: 200px;
-  height: 50px;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    border-radius: 4px;
+    border: transparent;
+    cursor: pointer;
 
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-  border-radius: 4px;
-  border: transparent;
-  cursor: pointer;
-
-  font-weight: 700;
-  font-size: 16px;
-  line-height: 1.88;
-  letter-spacing: 0.06em;
-  padding: 10px;
-}
-.form__btn:hover .form__icon,
-.form__btn:focus .form__icon {
-  background-color: var(--accent-color);
-  color: var(--primary-white-color);
-  border-color: transparent;
-  transform: scale(1.5);
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.form__icon {
-  margin-left: 10px;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 1.88;
+    letter-spacing: 0.06em;
+    padding: 10px;
+  }
+  &__btn:hover .form__icon,
+  &__btn:focus .form__icon {
+    background-color: var(--accent-color);
+    color: var(--primary-white-color);
+    border-color: transparent;
+    transform: scale(1.5);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  &__icon {
+    margin-left: 10px;
+  }
 }
