--- a/sass/components/_page-header.scss
+++ b/sass/components/_page-header.scss
@@ -12,60 +12,131 @@
 
 .site-nav {
   display: flex;
+  .site-nav:not(:last-child) {
+    margin-left: 50px;
+  }
+
+  & .site-nav__link {
+    color: var(--title-text-color);
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 1.14;
+    text-decoration: none;
+    letter-spacing: 0.02em;
+  }
+
+  &__item {
+    position: relative;
+  }
+
+  &__link::after {
+    content: '';
+    position: absolute;
+    left: 0;
+    bottom: -32px;
+    display: block;
+    width: 100%;
+    height: 4px;
+    background-color: var(--accent-color);
+    border-radius: 2px;
+    opacity: 0;
+    transform: scaleX(0);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1),
+      opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+
+  &__link:hover::after,
+  &__link.current::after {
+    opacity: 1;
+    transform: scaleX(1);
+  }
+
+  & .site-nav__link:hover,
+  & .site-nav__link:focus {
+    color: var(--accent-color);
+  }
+
+  & .site-nav__link.current {
+    color: var(--accent-color);
+  }
+
+  &__item:not(:last-child) {
+    margin-right: 50px;
+  }
 }
 
-.site-nav:not(:last-child) {
-  margin-left: 50px;
-}
+.header-contacts {
+  display: flex;
+  margin-left: auto;
+  .header-contacts__item {
+    display: inline-flex;
+    align-items: center;
+  }
 
-.site-nav .site-nav__link {
-  color: var(--title-text-color);
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 1.14;
-  text-decoration: none;
-  letter-spacing: 0.02em;
-}
+  &__item:not(:last-child) {
+    margin-right: 50px;
+  }
+  &__item:hover &__icon,
+  &__item:focus &__icon {
+    fill: var(--accent-color);
+    opacity: 1.2;
+    transform: scaleY(-1);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  &__title {
+    color: var(--primary-text-color);
+    font-weight: 500;
+    line-height: 1.14;
+    font-style: normal;
+    text-decoration: none;
+    letter-spacing: 0.02em;
+    display: flex;
+    align-items: center;
+  }
 
-.site-nav__item {
-  position: relative;
-}
+  &__title:hover,
+  .footer-contacts__link:hover,
+  .footer-contacts__text:hover {
+    color: var(--accent-color);
+  }
+  &__icon {
+    fill: var(--primary-text-color);
+    cursor: pointer;
+    margin-right: 10px;
+    opacity: 1;
+    transform: scaleY(1);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
 
-.site-nav__link::after {
-  content: '';
-  position: absolute;
-  left: 0;
-  bottom: -32px;
-  display: block;
-  width: 100%;
-  height: 4px;
-  background-color: var(--accent-color);
-  border-radius: 2px;
-  opacity: 0;
-  transform: scaleX(0);
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.site-nav__link:hover::after,
-.site-nav__link.current::after {
-  opacity: 1;
-  transform: scaleX(1);
-}
-
-.site-nav .site-nav__link:hover,
-.site-nav .site-nav__link:focus {
-  color: var(--accent-color);
-}
-
-.site-nav .site-nav__link.current {
-  color: var(--accent-color);
-}
-
-.site-nav__item:not(:last-child) {
-  margin-right: 50px;
+  &__icon:not(:last-child) {
+    margin-right: 10px;
+  }
 }
 
 .border {
   border: 1px solid #ececec;
+}
+
+.button {
+  display: block;
+  border-radius: 4px;
+  padding: 10px 32px;
+  min-width: 200px;
+  margin-right: auto;
+  margin-left: auto;
+
+  background-color: var(--accent-color);
+  color: var(--primary-white-color);
+
+  border-color: transparent;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.88;
+  cursor: pointer;
+  text-align: center;
+  letter-spacing: 0.06em;
+  &:hover,
+  &:focus {
+    color: var(--primary-white-color);
+  }
 }
