--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,5 +1,7 @@
 @import './utils/variables';
 
+@import './base/normalize';
+
 @import './components/modal';
 @import './components/portfolio';
 @import './components/clients';
@@ -10,91 +12,3 @@
 @import './components/logo';
 @import './components/footer';
 @import './components/page-header';
-
-.no-scroll {
-  overflow: hidden;
-}
-
-.visually-hidden {
-  position: absolute;
-  white-space: nowrap;
-  width: 1px;
-  height: 1px;
-  overflow: hidden;
-  border: 0;
-  padding: 0;
-  clip: rect(0 0 0 0);
-  clip-path: inset(50%);
-  margin: -1px;
-}
-
-p,
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  margin: 0;
-  padding: 0;
-}
-
-ul,
-ol {
-  margin: 0;
-  padding-left: 0;
-}
-
-img {
-  display: block;
-  max-width: 100%;
-  height: auto;
-}
-
-.container {
-  width: 1200px;
-  margin: 0 auto;
-  padding-left: 15px;
-  padding-right: 15px;
-  /* outline: 2px solid red; */
-}
-
-.box {
-  display: flex;
-  align-items: center;
-
-  padding-top: 24px;
-  padding-bottom: 25px;
-}
-
-body {
-  background-color: var(--primary-white-color);
-  color: var(--primary-text-color);
-  font-family: 'Roboto', sans-serif;
-  font-size: 14px;
-  letter-spacing: 0.03em;
-}
-
-.border {
-  border: 1px solid #ececec;
-}
-
-.list {
-  list-style: none;
-}
-
-.section {
-  padding-top: 94px;
-  padding-bottom: 94px;
-}
-.section-title {
-  color: var(--title-text-color);
-  font-weight: 700;
-  font-size: 36px;
-  line-height: 1.17;
-  letter-spacing: 0.03em;
-  text-align: center;
-  margin-right: auto;
-  margin-left: auto;
-  margin-bottom: 50px;
-}
