--- a/sass/components/_feature.scss
+++ b/sass/components/_feature.scss
@@ -4,17 +4,25 @@
   padding-bottom: 94px;
   &__list {
     display: flex;
-    margin-left: -30px;
-    text-align: center;
+    flex-wrap: wrap;
+    gap: 30px;
+    // margin-left: -30px;
+    // text-align: center;
   }
 
   &__item {
-    width: calc((100% - 120px) / 4);
-    margin-left: 30px;
+    width: 100%;
+    // margin-left: 30px;
     background: #ffffff;
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
       0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 0px 0px 4px 4px;
+    @media screen and (min-width: 768px) {
+      width: calc((100% - 30px) / 2);
+    }
+    @media screen and (min-width: 1200px) {
+      width: calc((100% - 120px) / 4);
+    }
   }
 
   &__title {
@@ -25,6 +33,7 @@
     letter-spacing: 0.03em;
     margin-top: 30px;
     margin-bottom: 10px;
+    text-align: center;
   }
 
   &__text {
@@ -75,4 +84,20 @@
     transform: rotate(360deg);
     transition: transform 800ms cubic-bezier(0.4, 0, 0.2, 1);
   }
+}
+
+.section {
+  padding-top: 60px;
+  padding-bottom: 60px;
+}
+.section-title {
+  color: var(--title-text-color);
+  font-weight: 700;
+  font-size: 28px;
+  line-height: 1.17;
+  letter-spacing: 0.03em;
+  text-align: center;
+  margin-right: auto;
+  margin-left: auto;
+  margin-bottom: 50px;
 }
