--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -2,26 +2,31 @@
 
 .hero {
   text-align: center;
-  padding-top: 200px;
-  padding-bottom: 200px;
+  padding-top: 118px;
+
   &__title {
     color: var(--primary-white-color);
     font-weight: 900;
-    font-size: 44px;
-    line-height: 1.36;
+    font-size: 26px;
+    line-height: 1.62;
     letter-spacing: 0.06em;
     text-align: center;
-    max-width: 696px;
-    height: 120px;
+    max-width: 360px;
+    height: 84px;
     margin-left: auto;
     margin-right: auto;
     margin-bottom: 30px;
     text-transform: uppercase;
+    @media screen and (min-width: 1200px) {
+      max-width: 696px;
+      height: 120px;
+      font-size: 44px;
+      line-height: 1.36;
+    }
   }
   &__overlay {
-    height: 600px;
+    height: 400px;
     outline: 1px solid #000;
-    max-width: 1600px;
     margin-left: auto;
     margin-right: auto;
     background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
